@@ -334,7 +334,7 @@ impl Mainloop {
         }
     }
 
-    /// Dispatch timeout, io and deferred events from the previously executed poll. On success
+    /// Dispatch timeout, IO and deferred events from the previously executed poll. On success
     /// returns the number of source dispatched.
     pub fn dispatch(&mut self) -> Result<u32, PAErr> {
         match unsafe { capi::pa_mainloop_dispatch((*self._inner).ptr) } {
@@ -388,7 +388,7 @@ impl Mainloop {
     /// No need to free the API as it is owned by the loop and is destroyed when the loop is freed.
     ///
     /// Talking to PA directly with C requires fetching this pointer explicitly via this function.
-    /// This is actually unecessary through this binding. The pointer is retrieved automatically
+    /// This is actually unnecessary through this binding. The pointer is retrieved automatically
     /// upon Mainloop creation, stored internally, and automatically obtained from it by functions
     /// that need it.
     pub fn get_api<'a>(&self) -> &'a mut ::mainloop::api::MainloopApi {
